Open links in new tab

--- a/content/visit-belgium-tips.adoc
+++ b/content/visit-belgium-tips.adoc
@@ -16,66 +16,66 @@ NOTE: BeJUG did not get any kind of sponsorship or deal from any of the places l
 
 ==== Zoo of Antwerp
 
-The https://www.zooantwerpen.be/en/[Zoo of Antwerp] is the oldest animal park in the country and one of the oldest in the world, established on 21 July 1843. It's located in the city center, next to the central station.
+The https://www.zooantwerpen.be/en/[Zoo of Antwerp^] is the oldest animal park in the country and one of the oldest in the world, established on 21 July 1843. It's located in the city center, next to the central station.
 
 ==== Flandria Boat / Waterbus
 
-_A https://flandria.nu/en/homepage-en/[Flandria boat tour] is the perfect way to discover Antwerp and its world-class port from a different angle._
+_A https://flandria.nu/en/homepage-en/[Flandria boat tour^] is the perfect way to discover Antwerp and its world-class port from a different angle._
 
-https://www.dewaterbus.be/en[DeWaterbus] is a cheaper alternative as it's more a public transport, that connects the center of Antwerp with the port and neighbouring cities like Kruibeke and Hemiksem.
+https://www.dewaterbus.be/en[DeWaterbus^] is a cheaper alternative as it's more a public transport, that connects the center of Antwerp with the port and neighbouring cities like Kruibeke and Hemiksem.
 
 ==== Brewery De Koninck
 
-_The most fun adventure in Antwerp? A https://www.dekoninck.be/en/interactive-tour[tour through our City Brewery]! That is not only a must-see, but especially a must-do due to the countless interactive experiences._
+_The most fun adventure in Antwerp? A https://www.dekoninck.be/en/interactive-tour[tour through our City Brewery^]! That is not only a must-see, but especially a must-do due to the countless interactive experiences._
 
 ==== The Playground
 
-For boardgame lovers! _Are you up for some games? Browse our collection of more than 400 games that you can play right here at https://www.facebook.com/theplaygroundx/[The Playground]. As a board game café and shop, our aim is to provide you with plenty of games to play, quality coffee, Belgian beers, and more._
+For boardgame lovers! _Are you up for some games? Browse our collection of more than 400 games that you can play right here at https://www.facebook.com/theplaygroundx/[The Playground^]. As a board game café and shop, our aim is to provide you with plenty of games to play, quality coffee, Belgian beers, and more._
 
 ==== Red Star Line Museum
 
-_Two million passengers made the crossing from Antwerp to North America aboard the steamships of the Red Star Line. Their story, that of the shipping company that transported them and that of the city and the port from which they departed, are central to the https://redstarline.be/en[Red Star Line Museum]’s main exhibition._
+_Two million passengers made the crossing from Antwerp to North America aboard the steamships of the Red Star Line. Their story, that of the shipping company that transported them and that of the city and the port from which they departed, are central to the https://redstarline.be/en[Red Star Line Museum^]’s main exhibition._
 
 ==== MAS
 
-_The https://mas.be/[MAS aims to be an international and pioneering museum] about the global connectedness between people and collections from different cultures and environments. With a river of tales, viewed from multiple perspectives, we engage everyone to be curious about the present, past, and future of Antwerp and the world._
+_The https://mas.be/[MAS aims to be an international and pioneering museum^] about the global connectedness between people and collections from different cultures and environments. With a river of tales, viewed from multiple perspectives, we engage everyone to be curious about the present, past, and future of Antwerp and the world._
 
 ==== Plantin-Moretus
 
-_In 1576, Plantin relocated his printing works to the Vrijdagmarkt. His family lived and worked there for three hundred years. They converted the ‘Gulden Passer’ (‘Golden Compasses’) into a beautiful mansion. The Moretus family cherished their https://museumplantinmoretus.be/en[printing works, which had become a part of Antwerp’s heritage]._
+_In 1576, Plantin relocated his printing works to the Vrijdagmarkt. His family lived and worked there for three hundred years. They converted the ‘Gulden Passer’ (‘Golden Compasses’) into a beautiful mansion. The Moretus family cherished their https://museumplantinmoretus.be/en[printing works, which had become a part of Antwerp’s heritage^]._
 
 === Brussels
 
 ==== Comics Art Museum
 
-Belgium is famous for its beers and french fries, but missing out on the  influence it had worldwide on comic art. So if you love the ninth art, don't hesitate to book a tour at https://www.comicscenter.net/en/home[the museum].
+Belgium is famous for its beers and french fries, but missing out on the  influence it had worldwide on comic art. So if you love the ninth art, don't hesitate to book a tour at https://www.comicscenter.net/en/home[the museum^].
 
 ==== Magritte Museum
 
-Belgium was the home many famous painters, but if you like surrealism, or just appreciate nice and relaxing paintings, the https://musee-magritte-museum.be/en[Magritte Museum] is a great place to visit. As a bonus, it is located next to the royal palace (and other museums) in case you want to expand your cultural expedition.
+Belgium was the home many famous painters, but if you like surrealism, or just appreciate nice and relaxing paintings, the https://musee-magritte-museum.be/en[Magritte Museum^] is a great place to visit. As a bonus, it is located next to the royal palace (and other museums) in case you want to expand your cultural expedition.
 
 ==== Chez Cubitus
 
-If you like playing board games while enjoying a fresh beer (or other non-alcoholic beverages), https://chezcubitus.be[this place] is probably for you.
+If you like playing board games while enjoying a fresh beer (or other non-alcoholic beverages), https://chezcubitus.be[this place^] is probably for you.
 
 ==== Cantillon Brewery
 
 Did you know that real Gueuze can only be manufactured in Brussels due to a specific yeast that only exists in the atmosphere of the city and its surroundings?
-If you like acidic beers or are just curious to discover how an ancestral blending process has evolved these days, http://www.cantillon.be/[Cantillon Brewery] is surely a reference in that matter. Booking is required for the best experience.
+If you like acidic beers or are just curious to discover how an ancestral blending process has evolved these days, http://www.cantillon.be/[Cantillon Brewery^] is surely a reference in that matter. Booking is required for the best experience.
 
 === Across Belgium
 
 ==== Brugge and Gent
 
-The two cities https://www.visitbruges.be/en[Brugge] and https://visit.gent.be/en/see-do/inquiry-desk-visit-gent[Gent] are competing as they have the same values to offer: water and boats in the city, shopping streets, historical buildings, ... Maybe best to visit both, so you can make an informed choice for a next return visit?
+The two cities https://www.visitbruges.be/en[Brugge^] and https://visit.gent.be/en/see-do/inquiry-desk-visit-gent[Gent^] are competing as they have the same values to offer: water and boats in the city, shopping streets, historical buildings, ... Maybe best to visit both, so you can make an informed choice for a next return visit?
 
 ==== Pairi Daiza
 
-As "Probably The Best Zoo in Europe," https://www.pairidaiza.eu[Pairi Daiza] is a must-see for animal lovers. It's on the other side of Belgium if you are in Antwerp (about 100km), but hey, it's a tiny country ;-)
+As "Probably The Best Zoo in Europe," https://www.pairidaiza.eu[Pairi Daiza^] is a must-see for animal lovers. It's on the other side of Belgium if you are in Antwerp (about 100km), but hey, it's a tiny country ;-)
 
 ==== Belgian Coast
 
-_https://www.belgium.be/en/about_belgium/tourism/the_coast[65 kilometer long stretch of sandy coastline with 15 resorts]_.
+_https://www.belgium.be/en/about_belgium/tourism/the_coast[65 kilometer long stretch of sandy coastline with 15 resorts^]_.
 
 According to some the most beautiful coastline in the world, while others hate the many high buildings. We leave the verdict to you...
 
@@ -83,33 +83,33 @@ According to some the most beautiful coastline in the world, while others hate t
 
 === Antwerp
 
-* https://www.axxes.be/nl/[Axxes Café/Restaurant Kinepolis]: Mexican and other food.
-* https://takumiramennoodles.com/be/[Takumi]: Japanese noodles and Rice/Curry, multiple locations in the city.
-* https://www.littleseoul.be/en[Little Seoul]: Korean BBQ, more on the pricy side, city center.
-* http://www.baiweichineserestaurant.be/[Bai Wei]: Chinese noodles, Chinatown district. The outside looks shabby, the inside is okay, food = great.
-* https://curryosity.be/[Curryosity]: Indian curry. Bit off the beaten path but delicious.
-* https://amadeus-resto.be/en/[Amadeus]: all you can eat spareribes, multiple locations, themed "old-timey".
-* https://www.restaurantdebomma.be/[Restaurant De Bomma]: wholesome Belgian food.
-* https://nl-nl.facebook.com/falafeltofantwerpen[Falaffeltof]: fallafels, in case you want a simpler meal.
-* https://caffenation.be/pages/antwerpcitycenter[Caffenation]: _an artisan specialty coffee roastery focused on more than just coffee_.
-* https://normocoffee.be/contact/[Normo]: coffee bar &
+* https://www.axxes.be/nl/[Axxes Café/Restaurant Kinepolis^]: Mexican and other food.
+* https://takumiramennoodles.com/be/[Takumi^]: Japanese noodles and Rice/Curry, multiple locations in the city.
+* https://www.littleseoul.be/en[Little Seoul^]: Korean BBQ, more on the pricy side, city center.
+* http://www.baiweichineserestaurant.be/[Bai Wei^]: Chinese noodles, Chinatown district. The outside looks shabby, the inside is okay, food = great.
+* https://curryosity.be/[Curryosity^]: Indian curry. Bit off the beaten path but delicious.
+* https://amadeus-resto.be/en/[Amadeus^]: all you can eat spareribes, multiple locations, themed "old-timey".
+* https://www.restaurantdebomma.be/[Restaurant De Bomma^]: wholesome Belgian food.
+* https://nl-nl.facebook.com/falafeltofantwerpen[Falaffeltof^]: fallafels, in case you want a simpler meal.
+* https://caffenation.be/pages/antwerpcitycenter[Caffenation^]: _an artisan specialty coffee roastery focused on more than just coffee_.
+* https://normocoffee.be/contact/[Normo^]: coffee bar &
 micro roastery.
-* https://kolonelcoffee.be/locations[Kolonel Coffee]: _on a weekly basis we roast for our customers, our own bar, and our wholesale customers_.
+* https://kolonelcoffee.be/locations[Kolonel Coffee^]: _on a weekly basis we roast for our customers, our own bar, and our wholesale customers_.
 
 === Brussels
 
-* https://www.visit.brussels/en/visitors/where-to-eat/tram-experience[Tram Experience]: lets you be carried away on a surprising culinary journey in a unique and original atmosphere! Six renowned chefs invite you to discover their gastronomic universes of varied flavors and horizons. Seats are limited...
-* https://www.kokob.be[KoKoB]: Ethiopian food. Traditionally, you eat with your hands, but you can request cutlery too.
-* https://tapaslocas.be/[Tapas Locas]: The best place to eat tapas in Brussels, period.
-* https://schievelavabo.com[Schievelavabo]: Typical Belgium tavern food. Several locations.
-* https://tero.be/en/restaurants/tero-restaurant-brussels/[Tero]: Gastronomic restaurant with an emphasis on locally sourced ingredients. More on the pricey side.
-* https://wolf.be[Wolf]: A food market. Ideal for a group that can't agree on the type of food they want to eat. Can be a bit noisy during  high affluence.
+* https://www.visit.brussels/en/visitors/where-to-eat/tram-experience[Tram Experience^]: lets you be carried away on a surprising culinary journey in a unique and original atmosphere! Six renowned chefs invite you to discover their gastronomic universes of varied flavors and horizons. Seats are limited...
+* https://www.kokob.be[KoKoB^]: Ethiopian food. Traditionally, you eat with your hands, but you can request cutlery too.
+* https://tapaslocas.be/[Tapas Locas^]: The best place to eat tapas in Brussels, period.
+* https://schievelavabo.com[Schievelavabo^]: Typical Belgium tavern food. Several locations.
+* https://tero.be/en/restaurants/tero-restaurant-brussels/[Tero^]: Gastronomic restaurant with an emphasis on locally sourced ingredients. More on the pricey side.
+* https://wolf.be[Wolf^]: A food market. Ideal for a group that can't agree on the type of food they want to eat. Can be a bit noisy during  high affluence.
 
 === Other Locations
 
-* https://www.biercentral.be/eng/[Bier Central]: _Enjoy Belgian classics in the mecca for true beer lovers in Ghent, Antwerp, Brussels, and Mechelen_.
+* https://www.biercentral.be/eng/[Bier Central^]: _Enjoy Belgian classics in the mecca for true beer lovers in Ghent, Antwerp, Brussels, and Mechelen_.
 
 == Getting around
 
-* https://www.velo-antwerpen.be/en[Velo] a bicycle-sharing service, you can buy a day/week pass
-* https://www.slimnaarantwerpen.be/en/public-transport/tram-bus[Public transportation] information on how to get around in Antwerpen using public transportation
+* https://www.velo-antwerpen.be/en[Velo^] a bicycle-sharing service, you can buy a day/week pass
+* https://www.slimnaarantwerpen.be/en/public-transport/tram-bus[Public transportation^] information on how to get around in Antwerpen using public transportation
